rds.tf
resource "aws_db_instance" "default" {
    vpc_security_group_ids = [aws_security_group.db_sg.id] # reference to the security group resource above
  allocated_storage    = 10
  db_name              = "mydb"
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t3.micro"
  username             = "foo"
  password             = "foobarbaz"
  parameter_group_name = "default.mysql5.7"
  skip_final_snapshot  = true
}
